# RelML

./: .gitignore  CMakeLists.txt  Readme.md
benchmarks/: pl_predict.py  requirements.txt  run_ml1m.py  simple_baseline_ml1m.py
bindings/: relml_python.cpp
include/relml/: CSVLoader.h  Column.h  Database.h  FKDetector.h  Parameter.h  Table.h  Typeinferrer.h
include/relml/agent/: Agent.h  ModelRegistry.h  RelMLSystem.h
include/relml/encoding/: CategoricalEncoder.h  HeteroEncoder.h  NumericalEncoder.h  TimestampEncoder.h
include/relml/gnn/: HeteroGraphSAGE.h  MLPHead.h
include/relml/graph/: GraphBuilder.h  HeteroGraph.h
include/relml/training/: Adam.h  Metrics.h  TaskBuilder.h  TaskParser.h  TaskSpec.h  Trainer.h
python/: setup.py
python/examples/: run_ml1m.py  run_sunnyside_demand.py  run_sunnyside_slots.py
python/guepard/: __init__.py
python/guepard/qwery/: __init__.py
python/guepard/qwery/relml/: __init__.py
scripts/: import_rel_trial.py  load_relbench_to_csv.py
src/agent/: ModelRegistry.cpp  RelMLSystem.cpp  agent.cpp
src/database/: CSVLoader.cpp  Column.cpp  Database.cpp  FKDetector.cpp  Table.cpp  Typeinferrer.cpp
src/encoding/: CategoricalEncoder.cpp  HeteroEncoder.cpp  NumericalEncoder.cpp  TimestampEncoder.cpp
src/example_tasks/: avito_user_ad_visit.cpp  hm_churn.cpp  ml1m_rating_classification.cpp  pl_outcome.cpp  sunnyside_demand.cpp  sunnyside_slots.cpp
src/gnn/: HeteroGraphSAGE.cpp  MLPHead.cpp
src/graph/: Graphbuilder.cpp  HeteroGraph.cpp
src/training/: Adam.cpp  Metrics.cpp  TaskBuilder.cpp  TaskParser.cpp  TaskSpec.cpp  Trainer.cpp
tests/: test_agent.cpp  test_database.cpp  test_encoding.cpp  test_gnn.cpp  test_grad_check.cpp  test_graph.cpp  test_system.cpp  test_training.cpp
